--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
                 
             </div>
             <div class="col-sm" style="margin-top:10px">
-                <a role="button" class="btn btn-primary btn-lg btn-block" href="url_for('contas')">Cadastrar Conta</a>
-                <a role="button" class="btn btn-primary btn-lg btn-block" href="url_for('postagem')">Criar Postagem</a>
+                <a role="button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('contas') }}">Cadastrar Conta</a>
+                <a role="button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('postagem') }}">Criar Postagem</a>
             </div>
             <div class="col-sm">
                 
