--- a/templates/postagem.html
+++ b/templates/postagem.html
@@ -26,7 +26,7 @@
                 
             </div>
             <div class="col-sm">
-                <form action="{{url_for('get_contas')}}" method="post">
+                <form action="{{url_for('get_postagem')}}" method="post">
                     <label for="">Data:</label><br>
                     <input type="date" name="data_post" id=""><br>
                     <label for="">Time:</label><br>
@@ -35,11 +35,12 @@
                     <input type="text" name="legenda" id=""><br>
                     <label for="">Título:</label><br>
                     <input type="text" name="titulo" id=""><br>
+                    <input type="submit" value="Salvar">
                 </form>
             </div>
             <div class="col-sm">
                 
-            </div>
+            </div> 
         </div>
     </div>
 
