--- a/templates/contas.html
+++ b/templates/contas.html
@@ -30,9 +30,10 @@
                     <label for="">Conta:</label><br>
                     <input type="text" name="conta" id=""><br>
                     <label for="">Usuário:</label><br>
-                    <input type="text" name="usuario" id=""><br>
+                    <input type="email" name="usuario" id=""><br>
                     <label for="">Password:</label><br>
-                    <input type="text" name="passwd" id=""><br>
+                    <input type="password" name="passwd" id=""><br>
+                    <input type="submit" value="Salvar">
                 </form>
             </div>
             <div class="col-sm">
